Removed print statement from update timer

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 /__pycache__
 virtual/
 venv/
+/venv
 extra_code.py
 task.txt
 this.py
@@ -8,3 +9,4 @@ main.db
 records.txt
 plot.py
 task_track_full.jpg
+pyglet/__pycache__
